Correct docs copy. Remove broken test assertions. Fix overflow issue on icon badge

--- a/docs/app/pages/components/components-sections/notifications/badge/badge.component.less
+++ b/docs/app/pages/components/components-sections/notifications/badge/badge.component.less
@@ -1,6 +1,7 @@
 .badge-separator {
     margin-top: 10px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .icon-example {
